--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.4",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.17",
@@ -13,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-sitemap": "^2.0.5",
+    "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-source-sanity": "^1.1.0",
     "gatsby-transformer-sharp": "^2.1.13",
@@ -20,7 +22,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
-    "react-image-lightbox": "^5.1.0"
+    "react-image-lightbox": "^5.1.0",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
