--- a/sanity/package.json
+++ b/sanity/package.json
@@ -23,7 +23,8 @@
     "@sanity/vision": "^0.140.8",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-quill": "^1.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
